# runningDict

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  makebuildrun.sh  ninjabuildrun.sh  readme.md  runningDict.sublime-project
data/: CMakeLists.txt  freedict-deu-eng.dict.license_header  test.dict
data/dataWindows/etc/gtk-3.0/: settings.ini
data/dataWindows/share/themes/Flat-Plat/gtk-3.0/: gtk.css
doc/: CMakeLists.txt  directoryStructure.md
doc/doxygen/: Doxyfile.in
packaging/: .CMakeLists.txt.swo  CMakeLists.txt  runningdict.desktop  runningdict.icon.in.rc  runningdictgui.desktop
source/: .ycm_extra_conf.py  CMakeLists.txt  Dict.cpp  Dict.h  LibInterface.cpp  LibInterface.h  Processer.cpp  Processer.h  Search.cpp  Search.h  SpeedTimer.h  Worker.cpp  Worker.h  log.cpp  log.h  main.cpp
source/gui/: ChangeWordWindow.cpp  ChangeWordWindow.h  Logic.cpp  Logic.h  MainWindow.cpp  MainWindow.h  NewDictWindow.cpp  NewDictWindow.h  NewWordWindow.cpp  NewWordWindow.h  SettingsWindow.cpp  SettingsWindow.h  guiMain.cpp
source/unittest/: CMakeLists.txt  cpr.cpp  test.cpp
test/: CMakeLists.txt  test.cpp  test.dict  test.py  test2.dict  test2.py  testLib.py
tmp/: test.cc
